fix overview collapse

--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@
 .dishPrice{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 
